Migration to version 2.1.0